// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sheet fill component should render component with next button 1`] = `
<WithStyles(GridWrapper)
  item={true}
  xs={12}
>
  <WithStyles(GridWrapper)
    alignItems="center"
    container={true}
    justify="center"
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      lg={8}
      md={8}
      sm={12}
      xl={6}
      xs={12}
    >
      <styled.div>
        <styled.h2>
          title
        </styled.h2>
        <styled.h2>
          1
          /
          33
        </styled.h2>
      </styled.div>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
  <WithStyles(GridWrapper)
    container={true}
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      xs={12}
    >
      <QuestionFillList
        errors={null}
        filters={Object {}}
      />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      xs={12}
    >
      <WithStyles(GridWrapper)
        alignItems="center"
        container={true}
        direction="row"
        justify="center"
        spacing={0}
      >
        <WithStyles(GridWrapper)
          item={true}
        />
        <WithStyles(GridWrapper)
          item={true}
        >
          <WithStyles(Button)
            onClick={[Function]}
            raised={true}
          />
        </WithStyles(GridWrapper)>
      </WithStyles(GridWrapper)>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
</WithStyles(GridWrapper)>
`;

exports[`Sheet fill component should render component with prev button 1`] = `
<WithStyles(GridWrapper)
  item={true}
  xs={12}
>
  <WithStyles(GridWrapper)
    alignItems="center"
    container={true}
    justify="center"
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      lg={8}
      md={8}
      sm={12}
      xl={6}
      xs={12}
    >
      <styled.div>
        <styled.h2>
          title
        </styled.h2>
        <styled.h2>
          100
          /
          8
        </styled.h2>
      </styled.div>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
  <WithStyles(GridWrapper)
    container={true}
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      xs={12}
    >
      <QuestionFillList
        errors={null}
        filters={Object {}}
      />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      xs={12}
    >
      <WithStyles(GridWrapper)
        alignItems="center"
        container={true}
        direction="row"
        justify="center"
        spacing={0}
      >
        <WithStyles(GridWrapper)
          item={true}
        >
          <Link
            replace={false}
            style={
              Object {
                "marginRight": 10,
              }
            }
            to="/fill/98"
          >
            <WithStyles(Button)
              raised={true}
            />
          </Link>
        </WithStyles(GridWrapper)>
        <WithStyles(GridWrapper)
          item={true}
        >
          <WithStyles(Button)
            color="primary"
            onClick={[Function]}
            raised={true}
          />
        </WithStyles(GridWrapper)>
      </WithStyles(GridWrapper)>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
</WithStyles(GridWrapper)>
`;

exports[`Sheet fill component should render component with submit button 1`] = `
<WithStyles(GridWrapper)
  item={true}
  xs={12}
>
  <WithStyles(GridWrapper)
    alignItems="center"
    container={true}
    justify="center"
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      lg={8}
      md={8}
      sm={12}
      xl={6}
      xs={12}
    >
      <styled.div>
        <styled.h2>
          title
        </styled.h2>
        <styled.h2>
          33
          /
          33
        </styled.h2>
      </styled.div>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
  <WithStyles(GridWrapper)
    container={true}
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      xs={12}
    >
      <QuestionFillList
        errors={null}
        filters={Object {}}
      />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      xs={12}
    >
      <WithStyles(GridWrapper)
        alignItems="center"
        container={true}
        direction="row"
        justify="center"
        spacing={0}
      >
        <WithStyles(GridWrapper)
          item={true}
        >
          <Link
            replace={false}
            style={
              Object {
                "marginRight": 10,
              }
            }
            to="/fill/31"
          >
            <WithStyles(Button)
              raised={true}
            />
          </Link>
        </WithStyles(GridWrapper)>
        <WithStyles(GridWrapper)
          item={true}
        >
          <WithStyles(Button)
            color="primary"
            onClick={[Function]}
            raised={true}
          />
        </WithStyles(GridWrapper)>
      </WithStyles(GridWrapper)>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
</WithStyles(GridWrapper)>
`;

exports[`Sheet fill component should render component without prev button 1`] = `
<WithStyles(GridWrapper)
  item={true}
  xs={12}
>
  <WithStyles(GridWrapper)
    alignItems="center"
    container={true}
    justify="center"
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      lg={8}
      md={8}
      sm={12}
      xl={6}
      xs={12}
    >
      <styled.div>
        <styled.h2>
          title
        </styled.h2>
        <styled.h2>
          1
          /
          8
        </styled.h2>
      </styled.div>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
  <WithStyles(GridWrapper)
    container={true}
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      xs={12}
    >
      <QuestionFillList
        errors={null}
        filters={Object {}}
      />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      xs={12}
    >
      <WithStyles(GridWrapper)
        alignItems="center"
        container={true}
        direction="row"
        justify="center"
        spacing={0}
      >
        <WithStyles(GridWrapper)
          item={true}
        />
        <WithStyles(GridWrapper)
          item={true}
        >
          <WithStyles(Button)
            onClick={[Function]}
            raised={true}
          />
        </WithStyles(GridWrapper)>
      </WithStyles(GridWrapper)>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
</WithStyles(GridWrapper)>
`;

exports[`Sheet fill component should render correctly empty 1`] = `
<WithStyles(GridWrapper)
  item={true}
  xs={12}
>
  <WithStyles(GridWrapper)
    alignItems="center"
    container={true}
    justify="center"
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      lg={8}
      md={8}
      sm={12}
      xl={6}
      xs={12}
    >
      <styled.div>
        <styled.h2>
          title
        </styled.h2>
        <styled.h2>
          1
          /
          8
        </styled.h2>
      </styled.div>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
  <WithStyles(GridWrapper)
    container={true}
    spacing={0}
  >
    <WithStyles(GridWrapper)
      item={true}
      xs={12}
    >
      <QuestionFillList
        errors={null}
        filters={Object {}}
      />
    </WithStyles(GridWrapper)>
    <WithStyles(GridWrapper)
      item={true}
      style={
        Object {
          "marginBottom": 10,
        }
      }
      xs={12}
    >
      <WithStyles(GridWrapper)
        alignItems="center"
        container={true}
        direction="row"
        justify="center"
        spacing={0}
      >
        <WithStyles(GridWrapper)
          item={true}
        />
        <WithStyles(GridWrapper)
          item={true}
        >
          <WithStyles(Button)
            onClick={[Function]}
            raised={true}
          />
        </WithStyles(GridWrapper)>
      </WithStyles(GridWrapper)>
    </WithStyles(GridWrapper)>
  </WithStyles(GridWrapper)>
</WithStyles(GridWrapper)>
`;

exports[`Sheet fill component should return redicert component if research is not loaded 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;
